# nonebot-plugin-mcsmanager

./: .gitignore  .pdm-python  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_mcsmanager/: __init__.py  _yaml.py  data.py  data_source.py  database_models.py  mcsm.py  mcsm_api.py  models.py  parser.py  text_parser.py  turst_id.py  utils.py
nonebot_plugin_mcsmanager/api_models/: instance.py  instances.py  overview.py  userlist.py
nonebot_plugin_mcsmanager/models/: instance_outputlog.py  instances.py  user.py
nonebot_plugin_mcsmanager/templates/: server_list.md.jinja
nonebot_plugin_mcsmanager/utils/: text_parser.py
