[project]
name = "nonebot-plugin-mcsmanager"
version = "0.1.0"
description = "mcsm for nonebot2"
authors = [{ name = "kexue", email = "x@kexue-cloud.cn" }]
dependencies = [
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "nonebot-plugin-alconna>=0.47.0",
    "nonebot-plugin-tortoise-orm>=0.1.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["datamodel-code-generator>=0.25.7"]

[tool.ruff.lint]
ignore = ["E402"]
